--- a/AML/EDA_level_3.ipynb
+++ b/AML/EDA_level_3.ipynb
@@ -129,7 +129,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "lvl3_df = pd.read_csv('.\\data\\sy_level_3.csv')"
+    "lvl3_df = pd.read_csv('.\\data\\level_3.csv')"
    ]
   },
   {
